MySQL.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  containers:
    - name: mysql
      image: mysql:latest
      ports:
        - name: http
          containerPort: 3306
          protocol: TCP
